syntax = "proto3";

package constant;

option go_package = "him/common/protocol/constant";

// 终端
enum Terminal {
    TerminalUnknown = 0; // 未知
    TerminalApp = 1; // App
    TerminalPC = 2; // PC
    TerminalWeb = 3; // Web
}

// 性别
enum Gender {
    GenderUnknown = 0; // 未知
    GenderMale = 1; // 男性
    GenderFemale = 2; // 女性
}